--- a/src/app/components/editor-dashboard/article-row/article-row.component.scss
+++ b/src/app/components/editor-dashboard/article-row/article-row.component.scss
@@ -351,6 +351,15 @@
       color: #fff;
     }
   }
+
+  a {
+  cursor: pointer;
+  color: #1976d2;
+  margin-left: 5px;
+  text-decoration: underline;
+  font-size: 0.98em;
+}
+
 }
 
 // ... rest of existing styles ...
